--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <div id="displayArea">
                 <label for="imageUpload">1. QRコード画像を選択:</label>
                 <input type="file" id="imageUpload" accept="image/*">
+                <label for="randomButton" style="margin-top: 15px;">または:</label>
+                <button id="randomButton">ランダム生成</button>
                 <div id="status">画像を待機中...</div>
                 <div id="sourceImageContainer">
                     <img id="sourceImage" src="#" alt="Uploaded QR Code Image">
